--- a/musicapp/teacher_musicapp/templates/teacher_musicapp/index.html
+++ b/musicapp/teacher_musicapp/templates/teacher_musicapp/index.html
@@ -2,3 +2,7 @@
 {%   for user in users    %}
     <h3> {{user.name}} </h3>
 {%   endfor    %}
+<h1> Students </h1>
+{%   for student in students    %}
+    <h3> {{student.student_id}} </h3>
+{%   endfor    %}
