test of html embedding

--- a/musicapp/teacher_musicapp/templates/teacher_musicapp/index.html
+++ b/musicapp/teacher_musicapp/templates/teacher_musicapp/index.html
@@ -12,7 +12,7 @@
 {%   endfor    %}
 <h1> Trackables </h1>
 {%   for trackable in trackables    %}
-    <h3> {{trackable.name + trackable.instrument}} </h3>
+    <h3> {{trackable}} </h3>
 {%   endfor    %}
 <h1> Recordings </h1>
 {%   for recording in recordings    %}
