--- a/musicapp/teacher_musicapp/templates/teacher_musicapp/index.html
+++ b/musicapp/teacher_musicapp/templates/teacher_musicapp/index.html
@@ -1,6 +1,9 @@
 <h1> Query test 1 </h1>
 <h3> {{query1}} </h3>
-
+<h1> Query test 2 </h1>
+<h3> {{query2}} </h3>
+<h1> Query test 3 </h1>
+<h3> {{query3}} </h3>
 <h1> Users </h1>
 {%   for user in users    %}
     <h3> {{user.name}} </h3>
