--- a/musicapp/teacher_musicapp/templates/teacher_musicapp/frontend.html
+++ b/musicapp/teacher_musicapp/templates/teacher_musicapp/frontend.html
@@ -1,7 +1,370 @@
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <!-- Required meta tags -->
+        <meta charset="utf-8" />
+        <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1, shrink-to-fit=no"
+        />
 
+        <!-- Bootstrap CSS -->
 
-<h1>hello, welcome to our music application!</h1>
+        <link
+            rel="stylesheet"
+            href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+            integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+            crossorigin="anonymous"
+        />
+
+        <!-- <link rel="stylesheet" href="musicapp/css" /> -->
+
+        <title>Hello, world!</title>
+
+        <style>
+            .nav-tabs .nav-item .nav-link {
+                background-color: #6d4b9a;
+                color: #fff;
+                border-radius: 0.25rem;
+            }
+            .nav-link {
+                margin: 0 5px;
+            }
+            html,
+            body {
+                height: 100%;
+            }
+            #studentNames {
+                height: 100%;
+                min-height: 100%;
+            }
+            #namelist {
+                justify-content: flex-start;
+                padding-top: 20%;
+            }
+            .tab-content {
+                height: 100%;
+                min-height: 100%;
+            }
+            #students {
+                height: 100%;
+                min-height: 100%;
+            }
+            #names {
+                margin-top: 10px;
+                /* margin-left: 5px; */
+            }
+            #studentTab {
+                background-color: #7c7484;
+                color: white;
+            }
+            #materials {
+                color: red;
+                background-color: red;
+            }
+
+            /* #studentTab.nav-link.active {
+                background-color: #fff;
+                color: #6d4b9a;
+            } */
+            #studentTab.nav-link.dropdown-toggle.collapsed {
+                background-color: #fff;
+                color: #6d4b9a;
+            }
+        </style>
+    </head>
+    <body>
+        <div
+            class="row-fluid justify-content-center"
+            style="width: 100%; margin: 0px; background-color: #6D4B9A;"
+        >
+            <ul
+                class="nav navbar nav-tabs justify-content-center"
+                style="border: none"
+                id="myTab"
+                role="tablist"
+            >
+                <li class="nav-item">
+                    <a
+                        class="nav-link"
+                        id="home-tab"
+                        data-toggle="tab"
+                        href="#home"
+                        role="tab"
+                        aria-controls="home"
+                        aria-selected="true"
+                    >
+                        Home
+                    </a>
+                </li>
+                <li class="nav-item ">
+                    <a
+                        class="nav-link active"
+                        id="students-tab"
+                        data-toggle="tab"
+                        href="#students"
+                        role="tab"
+                        aria-controls="students"
+                        aria-selected="false"
+                        >Students</a
+                    >
+                </li>
+                <li class="nav-item ">
+                    <a
+                        class="nav-link "
+                        id="messages-tab"
+                        data-toggle="tab"
+                        href="#messages"
+                        role="tab"
+                        aria-controls="messages"
+                        aria-selected="false"
+                        >Messages</a
+                    >
+                </li>
+                <li class="nav-item ">
+                    <a
+                        class="nav-link "
+                        id="files-tab"
+                        data-toggle="tab"
+                        href="#files"
+                        role="tab"
+                        aria-controls="files"
+                        aria-selected="false"
+                        >Files</a
+                    >
+                </li>
+            </ul>
+        </div>
+
+        <div class="tab-content">
+            <div class="tab-pane" id="home">
+                ...Content...
+            </div>
+            <div class="tab-pane active" id="students">
+                <div
+                    class="container"
+                    style="margin: 0px; padding: 0px; width: 25%; min-height: 100%; height:100%; overflow: auto"
+                >
+                    <div class="row" id="studentNames">
+                        <ul
+                            class="nav navbar nav-tabs flex-column align-items-start"
+                            style="border: none; background-color: #7C7484;"
+                            id="namelist"
+                        >
+                            <li class="collapsed" id="names">
+                                <a
+                                    class="nav-link dropdown-toggle"
+                                    href="#student"
+                                    data-toggle="collapse"
+                                    data-target="#materials"
+                                    aria-haspopup="true"
+                                    aria-expanded="false"
+                                    id="studentTab"
+                                >
+                                    MacKenzi Simpson
+                                </a>
+                                <ul class="sub-menu collapse" id="materials">
+                                    <li>
+                                        <a href="#materialinfo"
+                                            >CSS3 Animation</a
+                                        >
+                                    </li>
+                                </ul>
+                                <!-- <div
+                                    class="dropdown-menu"
+                                    aria-labelledby="navbarDropdown"
+                                >
+                                    <a class="dropdown-item" href="#">Action</a>
+                                    <a class="dropdown-item" href="#"
+                                        >Another action</a
+                                    >
+                                    <div class="dropdown-divider"></div>
+                                    <a class="dropdown-item" href="#"
+                                        >Something else here</a
+                                    >
+                                </div> -->
+                            </li>
+                            <li class="collapsed" id="names">
+                                <a
+                                    class="nav-link dropdown-toggle"
+                                    href="#student"
+                                    data-toggle="collapse"
+                                    data-target="#materials"
+                                    aria-haspopup="true"
+                                    aria-expanded="false"
+                                    id="studentTab"
+                                >
+                                    Harrison Taee
+                                </a>
+                                <ul class="sub-menu collapse" id="materials">
+                                    <li>
+                                        <a href="#materialinfo"
+                                            >CSS3 Animation</a
+                                        >
+                                    </li>
+                                </ul>
+                            </li>
+                            <li class="collapsed" id="names">
+                                <a
+                                    class="nav-link dropdown-toggle"
+                                    href="#student"
+                                    data-toggle="collapse"
+                                    data-target="#materials"
+                                    aria-haspopup="true"
+                                    aria-expanded="false"
+                                    id="studentTab"
+                                >
+                                    Carolyn Macleod
+                                </a>
+                                <ul class="sub-menu collapse" id="materials">
+                                    <li>
+                                        <a href="#materialinfo"
+                                            >CSS3 Animation</a
+                                        >
+                                    </li>
+                                </ul>
+                            </li>
+                            <li class="collapsed" id="names">
+                                <a
+                                    class="nav-link dropdown-toggle"
+                                    href="#student"
+                                    data-toggle="collapse"
+                                    data-target="#materials"
+                                    aria-haspopup="true"
+                                    aria-expanded="false"
+                                    id="studentTab"
+                                >
+                                    Samson Rao
+                                </a>
+                                <ul class="sub-menu collapse" id="materials">
+                                    <li>
+                                        <a href="#materialinfo"
+                                            >CSS3 Animation</a
+                                        >
+                                    </li>
+                                </ul>
+                            </li>
+                            <li class="collapsed" id="names">
+                                <a
+                                    class="nav-link dropdown-toggle"
+                                    href="#student"
+                                    data-toggle="collapse"
+                                    data-target="#materials"
+                                    aria-haspopup="true"
+                                    aria-expanded="false"
+                                    id="studentTab"
+                                >
+                                    Kat Cottrell
+                                </a>
+                                <ul class="sub-menu collapse" id="materials">
+                                    <li>
+                                        <a href="#">CSS3 Animation</a>
+                                    </li>
+                                    <li><a href="#">General</a></li>
+                                    <li><a href="#">Buttons</a></li>
+                                    <li><a href="#">Tabs & Accordions</a></li>
+                                    <li><a href="#">Typography</a></li>
+                                    <li><a href="#">FontAwesome</a></li>
+                                    <li><a href="#">Slider</a></li>
+                                    <li><a href="#">Panels</a></li>
+                                    <li><a href="#">Widgets</a></li>
+                                    <li><a href="#">Bootstrap Model</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="tab-pane" id="messages">
+                sup
+            </div>
+            <div class="tab-pane" id="files">
+                heyo
+            </div>
+        </div>
+
+        <!-- <div class="tab-content">
+            <div class="tab-pane active" id="student">
+                ...Content...
+            </div>
+        </div> -->
+        <!-- <ul class="nav flex-column nav-tabs" id="myTab" role="tablist">
+            <li class="nav-item">
+                <a
+                    class="nav-link active"
+                    id="home-tab"
+                    data-toggle="tab"
+                    href="#home"
+                    role="tab"
+                    aria-controls="home"
+                    aria-selected="true"
+                    >MacKenzi Simpson</a
+                >
+            </li>
+            <li class="nav-item">
+                <a
+                    class="nav-link"
+                    id="contact-tab"
+                    data-toggle="tab"
+                    href="#contact"
+                    role="tab"
+                    aria-controls="contact"
+                    aria-selected="false"
+                    >Harrison Taee</a
+                >
+            </li>
+        </ul> -->
+
+        <!-- <style>
+            .nav-tabs {
+                border-bottom: 1px solid #d45500;
+            }
+
+        </style> -->
+
+        <!-- Optional JavaScript -->
+
+        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+        <script
+            src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+            integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+            crossorigin="anonymous"
+        ></script>
+        <script
+            src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+            integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+            crossorigin="anonymous"
+        ></script>
+        <script
+            src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+            integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+            crossorigin="anonymous"
+        ></script>
+        <!-- <script type="text/javascript" src="js/main.js"></script> -->
+
+        <!-- <div class="students" id="students">
+            <div class="container">
+                <h1 class="text-center">Whatsup</h1>
+                <div class="row">
+                    <div class="col-lg-4 col-md-4 col-sm-12">
+                        <span class="text-justify">S.Web Developer</span>
+                    </div>
+                    <div class="col-lg-8 col-md-8 col-sm-12 desc">
+                        <h3>D.John</h3>
+                        <p>
+                            ipsum dolor sit amet, consectetur adipisicing elit,
+                            sed do eiusmod tempor incididunt ut labore et dolore
+                            magna aliqua. Ut enim ad minim veniam, quis nostrud
+                            exercitation ullamco laboris nisi ut aliquip ex ea
+                            commodo consequat. Duis aute irure dolor in
+                            reprehenderit in voluptate velit esse cillum dolore
+                            eu fugiat nulla pariatur. Excepteur sint occaecat
+                            cupidatat non proident, sunt in culpa qui officia
+                            deserunt mollit anim id est laborum.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div> -->
+    </body>
+</html>
