--- a/musicapp/teacher_musicapp/templates/teacher_musicapp/index.html
+++ b/musicapp/teacher_musicapp/templates/teacher_musicapp/index.html
@@ -6,7 +6,7 @@
 <h3>{{query3}}</h3>
 <h1>Users</h1>
 {% for user in users %}
-<h3>{{user.name}}</h3>
+<h3>{{user.id}}</h3>
 {% endfor %}
 <h1>Students</h1>
 {% for student in students %}
