--- a/musicapp/teacher_musicapp/templates/teacher_musicapp/samson.html
+++ b/musicapp/teacher_musicapp/templates/teacher_musicapp/samson.html
@@ -1,1 +1,16 @@
-<button onclick="myFunction">hey</button>
+<html>
+<head>
+<title>Add Member </title>
+</head>
+
+<body>
+<h1>Add a Member </h1>
+<form action="" method="POST">
+{% csrf_token %}
+Name: <input type="text" name="name"/><br/>
+Email: <input type="text" name="email"/><br/>
+<input type="submit" value="Add Member"/>
+</form>
+</body>
+
+</html>
