edited models, added a view

--- a/musicapp/teacher_musicapp/templates/teacher_musicapp/index.html
+++ b/musicapp/teacher_musicapp/templates/teacher_musicapp/index.html
@@ -26,7 +26,7 @@
 {% endfor %}
 <h1>Recordings</h1>
 {% for recording in recordings %}
-<h3>{{recording.location}}</h3>
+<h3>{{recording}}</h3>
 {% endfor %}
 <h1>Notes</h1>
 {% for note in notes %}
