check which assignments are complete

--- a/musicapp/teacher_musicapp/templates/teacher_musicapp/index.html
+++ b/musicapp/teacher_musicapp/templates/teacher_musicapp/index.html
@@ -32,3 +32,7 @@
 {% for note in notes %}
 <h3>{{note.note}}</h3>
 {% endfor %}
+<h1>Finished Assignments</h1>
+{% for ass in fin %}
+<h3>{{ass}}</h3>
+{% endfor %}
